   the media path; the End event is sent after the channel halves have
   successfully optimized themselves out of the media path.

 * Local channel information in events is now prefixed with "LocalOne" and
   "LocalTwo". This replaces the suffix of "1" and "2" for the two halves of
   the Local channel. This affects the LocalBridge, LocalOptimizationBegin,
   and LocalOptimizationEnd events.

AGI (Asterisk Gateway Interface)
------------------
 * The manager event AGIExec has been split into AGIExecStart and AGIExecEnd.

 * The manager event AsyncAGI has been split into AsyncAGIStart, AsyncAGIExec,
   and AsyncAGIEnd.

CDR (Call Detail Records)
------------------
 * Significant changes have been made to the behavior of CDRs. For a full
   definition of CDR behavior in Asterisk 12, please read the specification
   on the Asterisk wiki (wiki.asterisk.org).

 * CDRs will now be created between all participants in a bridge. For each
   pair of channels in a bridge, a CDR is created to represent the path of
   communication between those two endpoints. This lets an end user choose who
   to bill for what during bridge operations with multiple parties.

 * The duration, billsec, start, answer, and end times now reflect the times
   associated with the current CDR for the channel, as opposed to a cumulative
   measurement of all CDRs for that channel.

 * When a CDR is dispatched, user defined CDR variables from both parties are
   included in the resulting CDR. If both parties have the same variable, only
   the Party A value is provided.

CEL (Channel Event Logging)
------------------
 * The 'extra' field of all CEL events that use it now consists of a JSON blob
   with key/value pairs which are defined in the Asterisk 12 CEL documentation.

 * AST_CEL_BLINDTRANSFER events now report the transferee bridge unique
   identifier, extension, and context in a JSON blob as the extra string
   instead of the transferee channel name as the peer.
